--- a/WordPress/trunk/modules/wordpress/ChangeLog
+++ b/WordPress/trunk/modules/wordpress/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-09  0.0.1f
+	* blocks/wp_contents.php:
+		記事ブロック単独使用時の不具合対応
+		
 2004-05-07  0.0.1e
 	* blocks/wp_recent_comments.php:
 	* blocks/wp_recent_posts.php:
