--- a/WordPress/trunk/modules/wordpress/ReadMe.en
+++ b/WordPress/trunk/modules/wordpress/ReadMe.en
@@ -9,6 +9,11 @@ To install this module, you don't need to run install.php, like WordPress needs 
 ------------
 ChangeLog
 ------------
+0.2.1  [2004-07-04]
+Added Features)
+-RSS ICON can display in XOOPS Block
+-German Language files are added by Joker (http://localfoo.info/)
+
 0.2.0  [2004-06-26]
 Added Features)
 -Enable to clone this module.
